# numericalLibrary

./: .gitignore  CMakeLists.txt  README.md
include/: integrate.hpp
src/: integrate.cpp  main.cpp
